# plato-calibre

./: .gitignore  Cargo.toml  README.md  Settings-sample.toml  build.rs  deploy.sh  link.sh
src/: calibre.rs  error.rs  event.rs  logger.rs  main.rs  settings.rs  types.rs  utils.rs
