[package]
name = "plato-calibre"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.45"
const_format = "0.2.22"
reqwest = { version = "0.11.6", default-features = false, features = ["rustls-tls", "json", "blocking"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
signal-hook = "0.3.10"
toml = "0.5.8"
